sprint4/tests/error/22_tuple_oob.py
# Tuple get out of bound. Similar to list
#
a: (int) = (1,2,3)
print(a[100])
